--- a/myCraft/package.json
+++ b/myCraft/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@creative-tim-official/argon-dashboard-free": "^1.2.0",
     "argon-dashboard": "^1.2.0",
+    "bootstrap": "^4.6.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
