--- a/myCraft/package.json
+++ b/myCraft/package.json
@@ -25,6 +25,7 @@
     "argon-dashboard": "^1.2.0",
     "bootstrap": "^4.6.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
