--- a/myCraft/package.json
+++ b/myCraft/package.json
@@ -26,8 +26,10 @@
     "@creative-tim-official/argon-dashboard-free": "^1.2.0",
     "argon-dashboard": "^1.2.0",
     "bootstrap": "^4.6.1",
+    "chart.js": "^3.7.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.2",
+    "ng2-charts": "^3.0.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -44,6 +46,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ng2-charts-schematics": "^0.1.7",
     "typescript": "~4.5.2"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.2.2.",
